:recycle: use toList instead of collector. See #7